syntax = "proto2";
package protos;

import "easy_rec/python/protos/dnn.proto";

message InputLayer {
    optional bool do_batch_norm = 1;
    optional bool do_layer_norm = 2;
    optional float dropout_rate = 3;
    optional float feature_dropout_rate = 4;
    optional bool output_feature_list = 5;
}

message HighWayTower {
    optional string input = 1;
    required uint32 emb_size = 2;
    required string activation = 3 [default = 'gelu'];
    optional float dropout_rate = 4;
}

message PeriodicEmbedding {
    required uint32 embedding_dim = 1;
    required float  coef_stddev = 2 [default = 1.0];
}

message AutoDisEmbedding {
    required uint32 embedding_dim = 1;
    required uint32 num_bins = 2;
    required float keep_prob = 3 [default = 0.8];
    required float temperature = 4;
}